01-Terraform/02 - Read, Generate, Modify Configurations/03-variables/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "var_demo" {
  name = "att-variables"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.vpn_ip]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpn_ip]
  }

  ingress {
    from_port   = 53
    to_port     = 53
    protocol    = "tcp"
    cidr_blocks = [var.vpn_ip]
  }
}
